# SynCABEL

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: syncabel_results_analysis.ipynb
scripts/: 3_prepare_data.py  4_train.py  5_infer.py  6_evaluate_syncabel.py  7_evaluate_scispacy.py  8_evaluate_embedding.py  README_3_prepare_data.md
scripts/1_preprocess_UMLS/: extract_umls_data.py  prepare_umls_MM_data.py  prepare_umls_QUAERO_data.py  prepare_umls_data.py  run_extract_and_prepare_umls.py
scripts/2_generate_synthetic_data/: README.md  convert_to_bigbio.py  generate.py  generate_synthMM.py  generate_synthQUAERO.py  prepare_concepts.py
scripts/2_generate_synthetic_data/prompts/: system_prompt_mm.txt  system_prompt_quaero_fr.txt
syncabel/: __init__.py  guided_inference.py  models.py  parse_data.py  trie.py  utils.py
