[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncabel"
version = "0.1.0"
description = "SynCABEL: Synthetic Contextualized Augmentation for Biomedical Entity Linking"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Anonymous", email = "anonymous@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "datasets>=2.0.0",
    "numpy>=1.21.0",
    # Data processing
    "pandas>=1.3.0",
    "nltk>=3.7",
    "tqdm>=4.64.0",
    # CLI and utilities
    "typer==0.16.0",
    # Development tools
    "ruff==0.12.7",
    "polars>=1.32.0",
    "pip>=25.2",
    "altair>=5.5.0",
    "scispacy>=0.5.5",
    "unidecode>=1.4.0",
]

[project.optional-dependencies]
scipacy = [
    "spacy>=3.4.0",
    "scispacy>=0.5.0",
]

[project.urls]
Repository = "https://github.com/anonymous/syncabel"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# Same as Black.
line-length = 88

[tool.ruff.isort]
known-first-party = ["syncabel"]
